Fix broken navbar on mobile

--- a/sites/vn_temp/css/KatawaShoujo.css
+++ b/sites/vn_temp/css/KatawaShoujo.css
@@ -6,183 +6,168 @@
 */
 
 * {
-    color: #e1e5e8
+	color: #e1e5e8;
 }
 
 img {
-    width: inherit
+	width: inherit;
 }
 
-a,a:hover {
-    color: #8989ff
+a {
+	color:#8989ff;
+}
+
+a:hover {
+	color:#8989ff;
 }
 
 body {
-    background-color: #0b0c10;
-    background-image: url(../images/shoujo_wp.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding-top: 50px
+	background-color: #0b0c10;
+	background-image: url('../images/shoujo_wp.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	padding-top: 24px;
 }
 
 .navbar {
-    border: 0;
-    margin-bottom: 16px
+	border: none;
+	margin-bottom: 12px;
 }
 
 .navbar-default {
-    background-color: #4d4dff;
-    border-radius: 0;
-    border-color: unset;
-    color: #0a0a0a;
-    box-shadow: 0 1px 9px 2px
+	background-color: #4d4dff;
+	border-radius: 0px;
+	border-color: unset;
+	color: #0a0a0aab;
+	border: 1px solid #000;
+	box-shadow: 0px 1px 9px 2px;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .navbar-default .navbar-brand {
-    font-weight: 700;
-    color: #e1e5e8
+	font-weight: bold;
+	color: #e1e5e8;
 }
 
-.navbar-default .navbar-brand:focus,.navbar-default .navbar-brand:hover {
-    color: #b0b9bf
+.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
+	color: #b0b9bf;
 }
 
+/* side nav css */
 .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    background-color: #0b0c10;
-    overflow-x: hidden;
-    transition: .35s;
-    padding-top: 50px
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	background-color: #0b0c10;
+	overflow-x: hidden;
+	transition: 0.35s;
+	padding-top: 50px;
 }
 
 .sidenav .sideNavItem a {
-    padding: 16px 8px;
-    text-decoration: none;
-    font-size: 1.2em;
-    color: #e1e5e8;
-    display: block;
-    transition: .3s;
-    width: max-content
+	padding: 16px 8px 16px 8px;
+	text-decoration: none;
+	font-size: 1.2em;
+	color: #e1e5e8;
+	display: block;
+	transition: 0.3s;
+	width: max-content;
 }
 
 .sidenav .sideNavItem {
-    border-bottom: solid 1px #333;
-    width: 100%
+	border-bottom: solid 1px #333;
+	width: 100%;
 }
 
 .sidenav a:hover {
-    color: #b0b9bf
+	color: #b0b9bf;
 }
 
 .contentWrapper {
-    margin-left: 15%;
-    margin-right: 15%;
-    background-color: #13151b
+	margin-left: 10%;
+	margin-right: 10%;
+	background-color: #13151b;
+	color: #0a0a0a;
+	box-shadow: 0px 1px 9px 2px;
+	border: 1px solid #000;
 }
 
 .topWrapper {
-    border-bottom: 2px solid #4d4dff;
-    padding-bottom: 30px
-}
-
-.novelDeveloper2,.novelPublisher2 {
-    color: #4d4dff
+	border-bottom: 2px solid #4d4dff;
+	padding-bottom: 30px;
 }
 
 .midWrapper {
-    padding: 30px 15px;
-    background-color: #13151b
+	padding-bottom: 30px;
+}
+
+.novelDeveloper2, .novelPublisher2 {
+	color: #4d4dff;
+}
+
+.midWrapper {
+	padding-top: 30px;
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: #13151b;
 }
 
 .sectionHead {
-    font-size: 24px;
-    border-bottom: 1px solid #4d4dff
+	font-size: 24px;
+	border-bottom: 1px solid #4d4dff;
 }
 
-.vnButton {
-    margin-bottom: 8px
+.novelPublisher, .novelDeveloper {
+	color: #8989ff;
 }
 
-.contentWarningMobile,.contentWarningWeb {
-    border: 1px solid red;
-    border-radius: 1px
+.similarNovelsHead {
+	font-size: 20px;
+	background-color: #4d4dffbb;
+	text-align: center;
+	padding: 2px;
 }
 
-.contentWarningMobile {
-    display: none
+.linksHead {
+	font-size: 20px;
+	background-color: #4d4dffbb;
+	text-align: center;
+	padding: 2px;
 }
 
-@media screen and (max-width:375px) {
-    .contentWarningMobile,.contentWarningWeb {
-        border: 1px solid red;
-        border-radius: 1px;
-        display: none
-    }
-
-    .contentWarningMobile {
-        display: block
-    }
+.bannerThumb {
+	width: 100%;
 }
 
-.novelDeveloper,.novelPublisher {
-    color: #8989ff
-}
-
-.linksHead,.similarNovelsHead {
-    font-size: 20px;
-    background-color: #4d4dffbb;
-    text-align: center;
-    padding: 2px
-}
-
-.bannerThumb,.bannerThumb img {
-    width: 100%
+.bannerThumb img {
+	width: 100%;
 }
 
 #mobileBar {
-    display: none
+	display: none;
 }
 
 .valign {
-    display: flex;
-    vertical-align: middle;
-    align-items: center;
-    justify-content: center
+	display: flex;
+	vertical-align: middle;
+	align-items: center;
+	justify-content: center;
 }
 
 .lbWindow {
-    width: 100%
+	width: 100%;
 }
 
 .lightbox .lb-image {
-    border: 4px solid #1f2833!important
+	border: 4px solid #1F2833 !important;
 }
 
 .lb-data .lb-number {
-    color: #e1e5e8!important
-}
-
-@media screen and (max-width:1199px) {
-    .contentWrapper {
-        margin: 0
-	}
-
-    .item {
-        margin-top: 16px
-    }
-
-    #webBar {
-        display: none
-    }
-
-    #mobileBar {
-        display: block
-    }
+	color: #e1e5e8 !important;
 }
 
 .mobileNav {
@@ -190,24 +175,91 @@ body {
 }
 
 .novelTitle {
-	margin-top: 16px;
-    margin-bottom: 16px;
-    font-size: 48px;
-    text-align: left
+	margin-bottom: 16px;
+	font-size: 48px;
+	text-align: left;
 }
 
-@media screen and (max-width:767px) {
-    .clearfix {
-        max-width: 1024px!important
-    }
+.content-slider li{
+	text-align: center;
+}
 
-    body {
-        background: unset
-    }
+.developer {
+	font-weight: normal;
+	font-size: 24px;
+}
 
-    .valign {
-        display: block
-    }
+.vnButton {
+	margin-bottom: 8px
+}
+
+.contentWarningMobile,.contentWarningWeb {
+	border: 1px solid #ff6302;
+	border-radius: 1px
+}
+
+.contentWarningMobile {
+	display: none
+}
+
+.carousel {
+	padding-top: 8px;
+	margin-bottom: 20px;
+}
+
+.carousel-cell {
+	width: 100%;
+	height: auto;
+	margin-right: 8px;
+	counter-increment: carousel-cell;
+}
+
+.carousel-nav .carousel-cell img {
+}
+
+.carousel-nav .flickity-button {
+	display: none;
+}
+
+.carousel-cell:before {
+	display: block;
+	text-align: center;
+	font-size: 80px;
+}
+
+.carousel-nav .carousel-cell {
+	height: auto;
+	width: 100px;
+}
+
+.carousel-nav .carousel-cell:before {
+	font-size: 50px;
+}
+
+.carousel-nav .carousel-cell.is-nav-selected img {
+	border-radius: 6px;
+}
+
+@media screen and (max-width: 1199px) {
+	body {
+		padding-top: 50px;
+	}
+	
+	.contentWrapper {
+		margin: 0;
+	}
+
+	.item {
+		margin-top: 16px;
+	}
+
+	#webBar {
+		display: none;
+	}
+
+	#mobileBar {
+		display: block;
+	}
 
 	.webNav {
 		display: none;
@@ -216,17 +268,32 @@ body {
 	.mobileNav {
 		display: block;
 	}
+}
+
+@media screen and (max-width: 767px) {
+	.clearfix {
+		max-width: 1024px !important;
+	}
+	body {
+		background: unset;
+	}
+	.valign {
+		display: block;
+	}
 
 	.novelTitle {
 		font-size: 2.5em;
 	}
 }
 
-.content-slider li {
-    text-align: center
-}
+@media screen and (max-width:375px) {
+		.contentWarningMobile,.contentWarningWeb {
+			border: 1px solid orange;
+			border-radius: 1px;
+			display: none
+		}
 
-.developer {
-    font-weight: 400;
-    font-size: 24px
+		.contentWarningMobile {
+			display: block
+		}
 }
