--- a/sites/vn_temp/css/SteinsGate.css
+++ b/sites/vn_temp/css/SteinsGate.css
@@ -268,6 +268,11 @@ body {
 	.mobileNav {
 		display: block;
 	}
+	
+	.navbar-default {
+		margin-left: 0;
+		margin-right: 0;
+	}
 }
 
 @media screen and (max-width: 767px) {
